# orderbook-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SCOPE.md
bench/: Harness.hpp  Workload.hpp  bench_main.cpp
docs/: make_chart.py
notes/: ai-review.md  ds-comparison.md  reimplementation.md
src/: FlatBook.cpp  FlatBook.hpp  LevelBook.hpp  MapBook.cpp  MapBook.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  OrderLocation.hpp  PriceLevel.cpp  PriceLevel.hpp  Side.hpp  Trade.hpp  main.cpp
tests/: test_main.cpp
